--- a/day3/제네릭.md
+++ b/day3/제네릭.md
@@ -1,3 +1,246 @@
 # [day3]제네릭
 
 > 👩‍ 담당자: 양현화<br/>
+
+### 1. 제네릭이란?
+
+- 타입을 미리 정의하지 않고 사용하는 시점에 원하는 타입을 정의해서 쓸 수 있는 문법
+- 마치 함수의 파라미터와 같은 역할
+- (함수의 인자에 넘긴 값을 함수의 파라미터로 받아 함수 내부에서 그대로 사용하는 방식)
+- ‘타입을 넘기고 그 타입을 그대로 반환받는다.’
+
+### 2. 제네릭 기본 문법
+
+```jsx
+function getText<T>(text: T): T {
+  return text;
+}
+```
+
+1. 함수 이름 오른쪽에 <T>라고 적는다.
+2. 파라미터를 닫는 괄호 오른쪽 끝에 : 클론을 붙이고 T를 적는다.
+3. 파라미터 타입을 T로 정의한다.
+
+→ getText() 라는 함수를 실행할 때 아무 타입이나 넘길 수 있다.
+
+```jsx
+getText < string > "hi"; // hi
+```
+
+- ✅ 이 코드는 getText() 함수를 호출할 때 제네릭에 문자열 데이터 타입인 string 타입을 할당한다.
+
+```jsx
+function getText<string>(text: string): string {
+	return text;
+}
+```
+
+- T라고 선언한 모든 부분에 string 타입이 들어간다고 보면 된다.
+- ✅ 이 코드는 궁극적으로 다음과 같이 선언된 것과 같다.
+
+```jsx
+function getText(text: string): string {
+  return text;
+}
+```
+
+- 함수의 파라미터인 text는 string 타입이고, 함수의 반환 타입 역시 string 이다.
+
+### 3. 제네릭을 사용하는 이유
+
+### 3.1) 중복되는 타입 코드의 문제점
+
+- ✅ 제네릭을 사용하지 않는 경우의 코드
+
+```jsx
+function getText(text: string): string {
+  return text;
+}
+
+function getNumber(num: number): number {
+  return num;
+}
+```
+
+### 3.2) any를 쓰면 되지 않을까?
+
+- ✅ any를 사용한 경우의 코드
+
+```jsx
+function getText(text: any): any {
+  return text;
+}
+```
+
+- any를 사용하게 되면 타입스크립트의 장점들이 사라진다. (코드의 자동완성, 에러의 사전 방지 혜택)
+
+### 3.3) 제네릭으로 해결되는 문제점
+
+- ✅ 제네릭을 사용한 경우의 코드
+
+```jsx
+function getText<T>(text: T): T {
+  return text;
+}
+
+getText < string > "hi";
+getText < number > 100;
+```
+
+- getText() 함수에 제네릭을 선언하고 파라미터와 반환 타입에 제네릭 타입을 연결한다.
+- getText 함수 정의가 이렇게 바뀌는 것은 아니고, 함수의 타입을 string으로 선언해서 사용한 듯한 효과가 나타난다는 것.
+
+### 4. 인터페이스에 제네릭 사용하기
+
+```jsx
+interface ProductDropdown {
+  value: string;
+  selected: boolean;
+}
+
+interface StockDropdown {
+  value: number;
+  selected: boolean;
+}
+```
+
+→
+
+```jsx
+interface Dropdown<T> {
+  value: T;
+  selected: boolean;
+}
+```
+
+- 인터페이스 이름 오른쪽에 <T>를 붙여 주고
+- 인터페이스 내부 속성 중 제네릭으로 받은 타입을 사용할 곳에 T를 연결한다.
+- **타입을 유연하게 확장할 수 있을 뿐 아니라, 비슷한 역할을 하는 타입 코드를 대폭 줄일 수 있다.**
+
+```jsx
+// 드롭다운 유형별로 각각의 인터페이스를 연결
+const product: ProductDropdown;
+const stock: StockDropdown;
+const address: AdressDropdown;
+
+// 드롭다운 유형별로 하나의 제네릭 인터페이스를 연결
+const product: Dropdown<string>;
+const stock: Dropdown<number>;
+const address: Drowdown<{city: string; zipCode: string}>;
+```
+
+### 5. 제네릭의 타입 제약
+
+- 제네릭을 사용할 때 알아두면 유용한 문법 : **타입 제약**
+- 제네릭의 장점
+  - 미리 정의하지 않고 호출하는 시점에 타입을 정의해서 유연하게 확장할 수 있다는 것
+
+```jsx
+function embraceEverything<T>(thing: T): T {
+	return thing;
+}
+
+embraceEverything<string>(hi');
+embraceEverything<number>(100);
+```
+
+### 5.1 extends를 사용한 타입 제약
+
+✅ 모든 타입이 아니라, 몇개의 타입만 제네릭으로 받고싶다면 어떻게? → `extends`
+
+```jsx
+function embraceEverything<T extends string>(thing: T): T {
+	return thing;
+}
+
+embraceEverything<string>('hi'); // OK
+embraceEverything<number>(100); // Type 'number' does not satisfy the constraint 'string'.
+```
+
+- 제네릭을 선언하는 부분에 <T extends 타입> 과 같은 형태로 코드 작성
+- 제약한 string이 아닌 다른 타입을 제네릭으로 넘기려고 하면 에러 발생
+
+### 5.2 타입 제약의 특징
+
+- 일반적으로 타입을 제약할 때는 여러 개의 타입 중 몇개만 쓸수 있게 제약한다.
+
+✅ length 속성을 갖는 타입만 취급하겠다? : string, array, object
+
+```jsx
+function lengthOnly<T extends {length: number}>(value: T) {
+	return value.length;
+}
+```
+
+- lengthOnly 함수에서 제네릭의 타입을 length 속성을 갖는 타입으로 제약함
+- ⭐️ 다른 점은, 제네릭으로 받은 타입을 파라미터에만 연결해 주었고 반환 타입에는 연결하지 않았다.
+- 이 함수의 인자로 넘길 수 있는 데이터 타입은 문자열, 배열, length 속성을 갖는 객체가 된다.
+
+```jsx
+lengthOnly("hi");
+lengthOnly([1, 2, 3]);
+lengthOnly({ title: "abc", length: 123 });
+```
+
+- ⭐️ 제네릭의 타입 추론 : 함수를 호출할때 제네릭을 선언하지 않아도, 제네릭에 해당 타입을 넘긴 것과 같은 효과가 나타난다.
+
+### 5.3 keyof를 사용한 타입 제약
+
+- `keyof` : 특정 타입의 키 값을 추출해서 문자열 유니언 타입으로 변환해준다.
+
+```jsx
+type DeveloperKeys = keyof {name: string; skill: string;}
+```
+
+- keyof 키워드를 사용하여 객체의 키를 DeveloperKeys라는 타입 별칭에 담아둔다.
+
+- DeveloperKeys 타입에 마우스 커서를 올리면 다음과 같이 객체의 키가 유니언 타입으로 변환되어 있는 것을 확인할 수 있다.
+- keyof의 대상이 되는 객체에 name과 skill 이라는 속성(키값)이 있기 때문에
+- 이 키를 모두 유니언 타입으로 연결해서 반환해주었다.
+
+```jsx
+function printKeys<T extends keyof {name: string; skill: string;}>(value: T) {
+	console.log(value);
+}
+```
+
+- 제네릭을 정의하는 부분에 extends와 keyof를 조합해서 name과 skill 속성을 갖는 객체의 키만 타입으로 받겠다고 정의함.
+- 이 함수의 제네릭은 파라미터인 value에 연결되어 있기 때문에
+- 함수를 호출할 때 넘길 수 있는 인자는 문자열 name과 skill 이다.
+
+- 이처럼 extends를 이용해서 제네릭의 타입을 제약할 때 keyos를 함께 사용하여 타입의 제약 조건을 까다롭게 만들 수 있다.
+
+### 6. 제네릭을 처음 사용할 때 주의해야 할 사고방식
+
+- 가장 헷갈리는 부분은 : 함수 안에서 제네릭으로 받은 타입을 다룰 때
+
+```jsx
+function pringTextLegnth<T>(text: T) {
+  console.log(text.length);
+}
+
+pringTextLegnth < string > "hi";
+```
+
+- 함수 안에서도 문자열과 관련된 속성과 API를 제공받을 수 있을 것 같지만,
+- console.log(text.length); 이부분에서 실제로는 에러가 발생한다.
+- TS 컴파일러는 모르나봐
+- TS 컴파일러 관점에서는 pringTextLegnth 함수에 어떤 타입이 들어올지 모르기 때문에 함부로 어떤 타입을 가정하지 않는다.
+- 따랗서 함수안에서 제네릭으로 지정된 text 파라미터를 다룰 때 코드 자동완성이나 타입이 미리 정의된 효과는 얻을 수 없다.
+
+- 그럼 제네릭에 이 사실을 어떻게 알릴 수 있나? → 타입 제약 문법 사용
+- 이 함수는 텍스트 길이를 출력하기 때문에, 취급할 데이터에 length 속성이 있으면 된다.
+
+```jsx
+function pringTextLegnth<T extends { length: number }>(text: T) {
+	console.log(text.length);
+}
+```
+
+- 혹은 제네릭으로 받은 타입을 배열 형태로 정의하는 방법
+
+```jsx
+function pringTextLegnth<T>(text: T[]) {
+  console.log(text.length);
+}
+```
