--- a/12_타입추론.md
+++ b/12_타입추론.md
@@ -1,5 +1,6 @@
 
 # 타입 추론
+> 👩‍ 담당자: 정보연<br/>
 
 타입 추론은 TypeScript에서 변수의 타입을 **컴파일러가 자동으로 추론하는 기능**을 의미합니다. 이는 개발자가 명시적으로 타입을 선언하지 않아도 컴파일러가 코드를 분석하여 변수의 타입을 유추할 수 있게 해줍니다. 타입 추론은 TypeScript의 강력한 기능 중 하나로, **개발자가 코드를 작성할 때 타입을 명시적으로 지정하지 않더라도 타입 안정성을 확보할 수 있도록 도와줍니다.**
 
