--- a/13_타입단언.md
+++ b/13_타입단언.md
@@ -1,4 +1,6 @@
-## 타입탄언이란 
+# 타입탄언이란 
+
+> 👩‍ 담당자: 정보연<br/>
 
 개발자가 컴파일러에게 "이 변수는 이 타입이다"라고 명시적으로 알려주는 기능을 말합니다. 보통 타입스크립트는 타입 추론을 통해 타입을 결정합니다. 타입 추론을 활용하는 편이 안정성이 좋지만 타입 단언을 사용할 수 밖에 없는 상황에서는 타입 단언을 사용합니다. 
 
