--- a/14_타입가드.md
+++ b/14_타입가드.md
@@ -1,4 +1,5 @@
-## 타입가드란?
+# 타입가드란?
+> 👩‍ 담당자: 정보연<br/>
 
 타입 가드(Type Guard)는 TypeScript에서 **변수의 타입을 좁히는 데 사용**되는 메커니즘입니다. TypeScript는 정적 타입 언어로서 변수의 타입을 컴파일 타임에 결정합니다. 하지만 때로는 런타임에서 변수의 타입이 더 구체적이거나 제한적일 수 있습니다. 이런 경우를 다루기 위해 타입 가드를 사용합니다.
 
