--- a/15_타입호환.md
+++ b/15_타입호환.md
@@ -1,4 +1,5 @@
-## 타입호환이란?
+# 타입호환이란?
+> 👩‍ 담당자: 정보연<br/>
 
 타입스크립트(TypeScript)의 "타입 호환성"은 두 가지 타입 간에 값이 할당 가능한지 여부를 나타내는 개념입니다. 즉, 어떤 타입의 값이 다른 타입으로 변환되거나 할당될 수 있는지를 판단하는 규칙의 모음입니다. 이를 통해 코드 작성 시 불필요한 오류를 방지하고 타입 안정성을 유지할 수 있습니다.
 
