--- a/17_유틸리티타입.md
+++ b/17_유틸리티타입.md
@@ -1,4 +1,4 @@
-# 타입스크립트 모듈
+# 유틸리티타입
 > 👩‍ 담당자: 정보연<br/>
 
 타입스크립트는 유용한 유틸리티 타입을 제공하여 코드 작성과 유지보수를 더 쉽게 할 수 있도록 도와줍니다. 유틸리티 타입은 이미 정의되어 있는 타입 구조를 변경하여 재사용 하고 싶을때 주로 사용 됩니다. 이 유틸리티 타입은 타입스크립트에서 정의해놓은 내장 타입이기 때문에 설정파일의 lib 속성만 변경해주면 바로 사용 할 수 있습니다. 
